--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-pdf": "^4.3.0"
+    "vue-pdf-embed": "^1.2.1",
+    "vue3-pdf": "^4.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
